<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Team07RecipeFinder</string>
    <string name="menu_settings">Settings</string>

    <!-- TabNames Strings -->
    <string name="tab_pantry">Pantry</string>
    <string name="tab_search">Search</string>
    <string name="tab_myrecipes">MyRecipes</string>

    <!-- MainActivity Strings -->
    <!-- TextView Strings -->
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <!-- EditTextHint Strings -->
    <string name="title_activity_main">Recipe Finder</string>
    <string name="title_activity_new_recipe">NewRecipeActivity</string>

    <!-- Camera Strings -->
    <string name="status">status</string>
    <string name="title_activity_bogo_pic_gen">BogoPicGen</string>
    <string name="title_activity_camera">Camera</string>

    <!-- NewRecipeActivity Strings -->
    <!-- TextView Strings -->
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="newIngredient">1. New Ingredient</string>
    <string name="procedure">Procedure</string>
    <string name="newStep">1. New Step</string>
    <string name="done">Done</string>
    <string name="recipeImage">Recipe Image</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <!-- EditTextHint Strings -->
    <string name="search_ingredient">Ingredients</string>
    <string name="search_recipe">Recipe</string>
    <string name="pantry_search"> Search Using My Pantry</string>
    <string name="title_activity_view_recipe">ViewRecipe</string>
    <string name="enter_keywords">Enter Keywords</string>
    <string name="enter_ingredient">Enter Ingredients</string>
    <string name="synch_recipies">Synch</string>
    <string name="title_activity_view_searched_recipe">ViewSearchedRecipeActivity</string>

    <!-- ViewRecipeActivity Strings -->
    <!-- TextView Strings -->
    <string name="recipe_title">Recipe Title</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="recipe_ingredients">Ingredients:</string>
    <string name="recipe_directions">Directions:</string>
    <string name="ingredients_hint">One ingredient per line</string>
    <!-- Button Strings -->
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_email">Email</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_cancel">Cancel</string>
    <string name="keyword_search">Keyword Search</string>

    <!-- EditPantryMenu -->
    <string name="menu_delete_ingredient">Delete</string>
    <string name="menu_edit_ingredient">Edit</string>
    <string name="menu_pantry_title">Menu</string>
    
    <!-- SearchByPantryActivity -->
    <string name="title_activity_search_by_pantry">Select Pantry Items to Search By</string>
    
    <!-- GalleryViewActivity -->
    <string name="title_activity_gallery_view">GalleryViewActivity</string>
    <string name="previousImage">Previous</string>
    <string name="nextImage">Next</string>
    <string name="deleteImage">Delete</string>
    
    <!-- CameraActivity -->
    <string name="cancel_image">Cancel</string>
    <string name="save_image">Save</string>

</resources>
