<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewRecipeActivity" >

    <!-- Image of Recipe -->
    <ImageView
        android:id="@+id/mealPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="34dp"
        android:contentDescription="@string/recipeImage"
        android:src="@drawable/ic_launcher" />

    
    <!-- Description of Recipe -->
    <EditText
        android:id="@+id/mealDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mealPicture"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/mealPicture"
        android:hint="@string/description"
        android:ems="10" />

    
    <!-- Ingredients TextView and EditText -->
    <TextView
        android:id="@+id/ingredientsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mealPicture"
        android:layout_below="@+id/mealPicture"
        android:layout_marginTop="18dp"
        android:text="@string/ingredients"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/newIngredientEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ingredientsTextView"
        android:layout_below="@+id/ingredientsTextView"
        android:layout_marginTop="19dp"
        android:hint="@string/newIngredient"
        android:ems="10" />

    
	<!-- Procedure TextView and EditText -->
    <TextView
        android:id="@+id/procedureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newIngredientEditText"
        android:layout_centerVertical="true"
        android:text="@string/procedure"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/newStepEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/procedureTextView"
        android:layout_below="@+id/procedureTextView"
        android:layout_marginTop="19dp"
        android:hint="@string/newStep"
        android:ems="10" />
    
    
	<!-- Done Button -->
    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:text="@string/done" />

</RelativeLayout>