<!-- I Copied from 'activity_new_recipe.xml' with minor changes. Xiaohui Ma -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewRecipeActivity" >

    <!-- Image of Recipe -->
    <ImageView
        android:id="@+id/mealPicture_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="34dp"
        android:contentDescription="@string/recipeImage"
        android:src="@drawable/ic_launcher" />

    
    <!-- Description of Recipe -->
    <EditText
        android:id="@+id/mealDescription_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mealPicture_view"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/mealPicture_view"
        android:hint="@string/description"
        android:ems="10" />

    
    <!-- Ingredients TextView and EditText -->
    <TextView
        android:id="@+id/ingredientsTextView_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mealPicture_view"
        android:layout_below="@+id/mealPicture_view"
        android:layout_marginTop="18dp"
        android:text="@string/ingredients"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/newIngredientEditText_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ingredientsTextView_view"
        android:layout_below="@+id/ingredientsTextView_view"
        android:layout_marginTop="19dp"
        android:hint="@string/newIngredient"
        android:ems="10" />

    
	<!-- Procedure TextView and EditText -->
    <TextView
        android:id="@+id/procedureTextView_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newIngredientEditText_view"
        android:layout_centerVertical="true"
        android:text="@string/procedure"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/newStepEditText_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/procedureTextView_view"
        android:layout_below="@+id/procedureTextView_view"
        android:layout_marginTop="19dp"
        android:hint="@string/newStep"
        android:ems="10" />
    
    
	<!-- Save Button -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newStepEditText_view"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="45dp"
        android:text="@string/save" />
    
    <!-- Share Button -->
    <Button
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/saveButton"
        android:layout_alignBottom="@+id/saveButton"
        android:layout_alignRight="@+id/newStepEditText_view"
        android:layout_marginBottom="45dp"
        android:text="@string/share" />
    

</RelativeLayout>