<!--Layout for viewing a recipe. -GC -->
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/info_root"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:layout_gravity="bottom">
            
	<!-- Recipe title. -GC -->
	<EditText
	android:id="@+id/etRecipeTitle"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:layout_gravity="center_horizontal"
    android:textSize="25sp"
    android:textStyle="bold"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"/>
        
        <!-- Dividing Line. -GC -->
    <View  
    android:id="@+id/vDivider"
    android:layout_height="2dp"
    android:layout_width="fill_parent"
    android:background="#82949c" />
        
    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1">
        
        <ScrollView
        android:id="@+id/svRecipe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical">
            
<!-- LinearLayout to put Image/Description beside each other -->
		    <LinearLayout 
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal">
            <!-- Recipe picture. -GC -->
            <ImageButton
            android:id="@+id/ibRecipe"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:paddingLeft="10dp"
            android:src="@drawable/ic_launcher" />

            <!-- Recipe description. -GC -->
            <EditText
            android:id="@+id/etRecipeDescription"
            android:layout_width="220dp"
            android:layout_height="80dp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:textSize="15sp"
            android:text="@string/recipe_description" />
            </LinearLayout>
				
        		
		    <LinearLayout 
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal">
        	<!-- Recipe ingredients. -AS -->
        	<TextView
            android:id="@+id/tvIngredientsTitle"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
           	android:paddingTop="1dp"
           	android:paddingLeft="5dp"
           	android:textSize="20sp"
           	android:textStyle="bold"
           	android:text="@string/recipe_ingredients" />
        		
        	<Button
            android:id="@+id/bNewIngredient"	    
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="25dp"
          	android:layout_height="25dp"	        
          	android:background="#3af904"
            android:textColor="@android:color/white"
            android:text="@string/newIngredient" />
        	</LinearLayout>
        		
            <ListView
            android:id="@+id/lv_Ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            </ListView>
            
        		
        	<!-- Recipe directions. -GC -->
        	<TextView
            android:id="@+id/tvDirectionsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           	android:paddingTop="5dp"
           	android:paddingLeft="5dp"
           	android:textSize="20sp"
           	android:textStyle="bold"
           	android:text="@string/recipe_directions" />
        		
        	<EditText
            android:id="@+id/etDirectionsList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           	android:paddingTop="2dp"
           	android:paddingLeft="15dp"
           	android:textSize="15sp"/>
        	
        </LinearLayout>
        </ScrollView>
   </LinearLayout>

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
        android:id="@+id/b_recipeEdit"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:text="@string/button_edit" />
            
        <Button
        android:id="@+id/b_recipeDelete"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:text="@string/button_delete"/>
            
        <Button 
        android:id = "@+id/b_recipeSave"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:text="@string/save"/> 
                
        <Button
        android:id="@+id/b_recipeEmail"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:text="@string/button_email"/>
        
        </LinearLayout>
        </LinearLayout>
