<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
            </TabWidget>
            <!-- Frame for tabs -->

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <!-- Pantry Tab -->

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="right"
                        android:layout_weight="2"
                        android:gravity="right"
                        android:orientation="horizontal" >

                        <ListView
                            android:id="@+id/lvPantry"
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:scrollbars="vertical" >
                        </ListView>
                    </LinearLayout>

                    <Button
                        android:id="@+id/buttonAddIngredient"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add" />
                </LinearLayout>

                <!-- Search Tab -->

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >


                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <EditText
                            android:id="@+id/etSearchName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.75"
                            android:ems="10"
                            android:hint="@string/enter_keywords"
                            android:inputType="textMultiLine" />

                        <Button
                            android:id="@+id/buttonSearch"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:text="@string/search" />
                    </LinearLayout>
                    
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/buttonPantrySearch"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:text="@string/pantry_search" />
                        
                    </LinearLayout>


                    <ListView
                        android:id="@+id/lvSearchResults"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </ListView>
                </LinearLayout>

                <!-- MyRecipes Tab -->

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dip"
                        android:layout_gravity="right"
                        android:layout_weight="2"
                        android:gravity="right"
                        android:orientation="horizontal" >

                        <ListView
                            android:id="@+id/lvMyRecipes"
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent" >
                        </ListView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/buttonAddRecipe"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/add" />

                        <Button
                            android:id="@+id/buttonSynch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/synch_recipies" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>
